--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -8,6 +8,7 @@ ja:
         id: 番号
         task_name: タスク名
         memo: タスクの内容
+        end_time: 終了期限
         created_at: 作成日時
         updated_at: 更新日時
       user:
