ステータスの表示を実装

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -9,6 +9,7 @@ ja:
         task_name: タスク名
         memo: タスクの内容
         end_time: 終了期限
+        status: ステータス
         created_at: 作成日時
         updated_at: 更新日時
       user:
