--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -19,6 +19,7 @@ ja:
         email: メールアドレス
         current_password: 現在のパスワード
         password: パスワード
+        password_digest: パスワード
         password_confirmation: 確認用パスワード
         remember_me: ログインを記憶
   enums:
