--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -30,6 +30,7 @@ ja:
     this @user from being saved: 保存できませんでした
     create_my_account: アカウント登録する
     user_list: ユーザー一覧
+    admin: 管理者権限
   confirm:
     delete_confirmation: タスクを削除します。よろしいですか？
     delete_user_confirmation: ユーザーを削除します。よろしいですか？
